force-app/main/default/objects/Industry_Segment__c/Industry_Segment__c.object-meta.xml
<CustomObject>
    <label>Industry Segment</label>
    <nameField>
        <label>Industry Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industry Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>