force-app/main/default/objects/Industry_Segment__c/fields/Business_Sector__c.field-meta.xml
<CustomField>
    <fullName>Business_Sector__c</fullName>
    <description>This is the child relationship to the Business Sector Object</description>
    <label>Business Sector</label>
    <referenceTo>Business_Sector__c</referenceTo>
    <relationshipLabel>Industry Segments</relationshipLabel>
    <relationshipName>Industry_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>