force-app/main/default/objects/Industry_Segment__c/fields/Government_URL__c.field-meta.xml
<CustomField>
    <fullName>Government_URL__c</fullName>
    <description>Link to government description and classification</description>
    <label>Government URL</label>
    <type>Url</type>
</CustomField>