force-app/main/default/objects/Industry_Segment__c/fields/SAP_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_NAICS_Code__c</fullName>
    <formula>NAICS_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP NAICS Code</label>
    <type>Text</type>
</CustomField>