force-app/main/default/objects/Industry_Segment__c/fields/Two_Digit_NAICS_Code__c.field-meta.xml
<CustomField>
    <fullName>Two_Digit_NAICS_Code__c</fullName>
    <label>Two Digit NAICS Code</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>