force-app/main/default/objects/Industry_Segment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NAICS_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>